Fixed the overflow issue with icons on the main menu

--- a/resources/sass/theme/variables.scss
+++ b/resources/sass/theme/variables.scss
@@ -137,7 +137,7 @@ $enable-responsive-font-sizes: true;
 
 
 // Navigation
-$nav-link-padding-y: .625rem;
+$nav-link-padding-y: .650rem;
 
 // Breadcrumbs
 $breadcrumb-active-color: #495057;
